add cut to date_time row in base info mb not corrected start and end positions check!

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
 ------------------------------------------Кадуцей------------------------------------------
 Протокол встречи от 08.09.2021.
 ВСМ. Доработка существующего функционала:
-1. Закрепить горизонтальный бегунок в блоке «Таски». Количество строк 8
-2. Доработать ластик или что-нибудь вместо него.
-3. Блоки, если их закрыть и снова открыть, отображаются по 2-3-4 раза. Зависит от количества переоткрытий блока.
+---------1. Закрепить горизонтальный бегунок в блоке «Таски». Количество строк 8
+---------2. Доработать ластик или что-нибудь вместо него.
+---------3. Блоки, если их закрыть и снова открыть, отображаются по 2-3-4 раза. Зависит от количества переоткрытий блока.
 4. Убрать время в поле «Дата» в шапке. Оставить только дату (гггг.мм.дд).
 5. Не ищет по номеру ТТН, если в нем есть буквы.
 
