--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
 ---------1. Закрепить горизонтальный бегунок в блоке «Таски». Количество строк 8
 ---------2. Доработать ластик или что-нибудь вместо него.
 ---------3. Блоки, если их закрыть и снова открыть, отображаются по 2-3-4 раза. Зависит от количества переоткрытий блока.
-4. Убрать время в поле «Дата» в шапке. Оставить только дату (гггг.мм.дд).
+---------4. Убрать время в поле «Дата» в шапке. Оставить только дату (гггг.мм.дд).
 5. Не ищет по номеру ТТН, если в нем есть буквы.
 
 ВСМ. Новый функционал:
