check point 5 in TODo

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,7 @@
 ---------2. Доработать ластик или что-нибудь вместо него.
 ---------3. Блоки, если их закрыть и снова открыть, отображаются по 2-3-4 раза. Зависит от количества переоткрытий блока.
 ---------4. Убрать время в поле «Дата» в шапке. Оставить только дату (гггг.мм.дд).
-5. Не ищет по номеру ТТН, если в нем есть буквы.
+CHECK IT!---------5. Не ищет по номеру ТТН, если в нем есть буквы.
 
 ВСМ. Новый функционал:
 1. Смена статуса документа / деталей.
